plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '3.3.12'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'dev.mvc'
version = '1.0'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	// https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc8
	implementation 'com.oracle.database.jdbc:ojdbc8:21.5.0.0'
	// https://mvnrepository.com/artifact/org.json/json
	implementation 'org.json:json:20240303'
	
	// https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api
	implementation 'javax.servlet:javax.servlet-api:4.0.1'
	// https://mvnrepository.com/artifact/commons-io/commons-io
	implementation 'commons-io:commons-io:2.16.1'
	// https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload
	implementation 'commons-fileupload:commons-fileupload:1.5'
	
	testImplementation 'org.springframework.security:spring-security-test'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.0.2'
	
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5', 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	
	// SMS
	// https://mvnrepository.com/artifact/com.squareup.okhttp/okhttp
	implementation 'com.squareup.okhttp3:okhttp:4.9.3'
	// https://github.com/google/gson
	implementation 'com.google.code.gson:gson:2.9.0'
	
	// DTO 검증
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	
  // SNS Login
  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
  implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
  implementation 'org.springframework.boot:spring-boot-starter-security'
  implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
  testImplementation 'org.springframework.security:spring-security-test'
  
  // Mail -밑엔 파일-
  // https://mvnrepository.com/artifact/com.sun.mail/javax.mail
  implementation 'com.sun.mail:javax.mail:1.6.2'
  // https://mvnrepository.com/artifact/javax.activation/activation
 	// implementation 'javax.activation:activation:1.1.1'
}

tasks.named('test') {
	useJUnitPlatform()
}
